--- a/index.html
+++ b/index.html
@@ -11,50 +11,52 @@
     <div class="container2">
         <div class="contactus">
             <div class="contact info">
-                <i class="fa-solid fa-location-dot"></i>
-                <div class="Beg">Address</div>
-                <div class="accumalaka">Binus International, West Jakarta</div>
-                <div class="alamak">Indonesia</div>
+                <div class="address details">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <div class="Beg">Address</div>
+                    <div class="accumalaka">Binus International, West Jakarta</div>
+                    <div class="alamak">Indonesia</div>
+                </div>
+                <div class="phones details">
+                    <i class="fa-solid fa-phone"></i>
+                    <div class="Beg">Phone</div>
+                    <div class="accumalaka">+62 812 8843 3144</div>
+                    <div class="alamak">+62 895 3635 38889</div>
+                </div>
+                <div class="email details">
+                    <i class="fa-solid fa-envelope"></i>
+                    <div class="Beg">Email</div>
+                    <div class="accumalaka">AstraCares@gmail.com</div>
+                    <div class="alamak">AstraCares@outlook.com</div>
+                </div>
             </div>
-            <div class="contact info">
-                <i class="fa-solid fa-phone"></i>
-                <div class="Beg">Phone</div>
-                <div class="accumalaka">+62 812 8843 3144</div>
-                <div class="alamak">+62 895 3635 38889</div>
+            <div class="contactac">
+                <div class="contact-text">Reach Out to Us</div>
+                <p class="tonic">Here</p>
             </div>
-            <div class="contact info">
-                <i class="fa-solid fa-envelope"></i>
-                <div class="Beg">Email</div>
-                <div class="accumalaka">AstraCares@gmail.com</div>
-                <div class="alamak">AstraCares@outlook.com</div>
-            </div>
+            <form action="#">
+                <div class="boxinfo">
+                    <input type="text" placeholder="Input Your First Name">
+                </div>
+                <div class="boxinfo">
+                    <input type="text" placeholder="Input Your Last Name">
+                </div>
+                <div class="boxinfo">
+                    <input type="text" placeholder="xxxxxxxx@email.com">
+                </div>
+                <div class="boxinfo">
+                    <input type="text" placeholder="+62 000 000 0000">
+                </div>
+                <div class="boxinput message">
+                    <textarea placeholder="Type Your message Here"></textarea>
+                </div>
+                <div class="buttons">
+                    <input type="button" value="Send">
+                </div>
+            </form>
         </div>
-        <div class="contactac">
-            <div class="contact-text">Reach Out to Us</div>
-            <p class="tonic">Here</p>
-        </div>
-        <form action="#">
-            <div class="boxinfo">
-                <input type="text" placeholder="Input Your First Name">
-            </div>
-            <div class="boxinfo">
-                <input type="text" placeholder="Input Your Last Name">
-            </div>
-            <div class="boxinfo">
-                <input type="text" placeholder="xxxxxxxx@email.com">
-            </div>
-            <div class="boxinfo">
-                <input type="text" placeholder="+62 000 000 0000">
-            </div>
-            <div class="boxinput message">
-                <textarea placeholder="Type Your message Here"></textarea>
-            </div>
-            <div class="buttons">
-                <input type="button" value="Send">
-            </div>
-        </form>
     </div>
 </div>
-    <script src="https://kit.fontawesome.com/1d05bd84d8.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/1d05bd84d8.js" crossorigin="anonymous"></script>
 </body>
 </html>
