--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tidur</title>
+    <title>ddd</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/1d05bd84d8.js" crossorigin="anonymous"></script>   
 </head>
 <body>
-<div class="body">
     <div class="container2">
         <div class="contactus">
-            <div class="contact info">
+            <div class="contactinfo">
                 <div class="address details">
                     <i class="fa-solid fa-location-dot"></i>
                     <div class="Beg">Address</div>
@@ -30,6 +30,7 @@
                     <div class="alamak">AstraCares@outlook.com</div>
                 </div>
             </div>
+
             <div class="contactac">
                 <div class="contact-text">Reach Out to Us</div>
                 <p class="tonic">Here</p>
@@ -54,9 +55,8 @@
                     <input type="button" value="Send">
                 </div>
             </form>
-            </div>
+        </div>
     </div>
 </div>
-<script src="https://kit.fontawesome.com/1d05bd84d8.js" crossorigin="anonymous"></script>
 </body>
 </html>
