--- a/index.html
+++ b/index.html
@@ -8,50 +8,50 @@
     <script src="https://kit.fontawesome.com/1d05bd84d8.js" crossorigin="anonymous"></script>   
 </head>
 <body>
-    <div class="container2">
-        <div class="contactus">
-            <div class="contactinfo">
+    <div class="container">
+        <div class="content">
+            <div class="left-side">
                 <div class="address details">
                     <i class="fa-solid fa-location-dot"></i>
-                    <div class="Beg">Address</div>
-                    <div class="accumalaka">Binus International, West Jakarta</div>
-                    <div class="alamak">Indonesia</div>
+                    <div class="topic">Address</div>
+                    <div class="text-one">Binus International, West Jakarta</div>
+                    <div class="text-two">Indonesia</div>
                 </div>
                 <div class="phones details">
                     <i class="fa-solid fa-phone"></i>
-                    <div class="Beg">Phone</div>
-                    <div class="accumalaka">+62 812 8843 3144</div>
-                    <div class="alamak">+62 895 3635 38889</div>
+                    <div class="topic">Phone</div>
+                    <div class="text-one">+62 812 8843 3144</div>
+                    <div class="text-two">+62 895 3635 38889</div>
                 </div>
                 <div class="email details">
                     <i class="fa-solid fa-envelope"></i>
-                    <div class="Beg">Email</div>
-                    <div class="accumalaka">AstraCares@gmail.com</div>
-                    <div class="alamak">AstraCares@outlook.com</div>
+                    <div class="topic">Email</div>
+                    <div class="text-one">AstraCares@gmail.com</div>
+                    <div class="text-two">AstraCares@outlook.com</div>
                 </div>
             </div>
 
-            <div class="contactac">
-                <div class="contact-text">Reach Out to Us</div>
-                <p class="tonic">Here</p>
+            <div class="right-side">
+                <div class="topic-text">Reach Out to Us</div>
+                <p>Here</p>
             </div>
             <form action="#">
-                <div class="boxinfo">
+                <div class="input-box">
                     <input type="text" placeholder="Input Your First Name">
                 </div>
-                <div class="boxinfo">
+                <div class="input-box">
                     <input type="text" placeholder="Input Your Last Name">
                 </div>
-                <div class="boxinfo">
+                <div class="input-box">
                     <input type="text" placeholder="xxxxxxxx@email.com">
                 </div>
-                <div class="boxinfo">
+                <div class="input-box">
                     <input type="text" placeholder="+62 000 000 0000">
                 </div>
-                <div class="boxinput message">
+                <div class="input-box message-box">
                     <textarea placeholder="Type Your message Here"></textarea>
                 </div>
-                <div class="buttons">
+                <div class="button">
                     <input type="button" value="Send">
                 </div>
             </form>
