--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                     <div class="text-two">AstraCares@outlook.com</div>
                 </div>
             </div>
-
             <div class="right-side">
                 <div class="topic-text">Reach Out to Us</div>
                 <p>Here</p>
@@ -55,6 +54,7 @@
                     <input type="button" value="Send">
                 </div>
             </form>
+        </div>
         </div>
     </div>
 </body>
