--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <input type="text" placeholder="+62 000 000 0000">
                 </div>
                 <div class="input-box message-box">
-                    <textarea placeholder="Type Your message Here"></textarea>
+                    <textarea></textarea>
                 </div>
                 <div class="button">
                     <input type="button" value="Send">
