--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="https://kit.fontawesome.com/1d05bd84d8.js" crossorigin="anonymous"></script>   
 </head>
 <body>
-    <div class="container">
-        <div class="content">
+<div class="bodys">
+    <div class="container2">
+        <div class="contents">
             <div class="left-side">
                 <div class="address details">
                     <i class="fa-solid fa-location-dot"></i>
@@ -33,7 +34,7 @@
             <div class="right-side">
                 <div class="topic-text">Reach Out to Us</div>
                 <p>Here</p>
-                
+
             <form action="#">
                 <div class="input-box">
                     <input type="text" placeholder="Input Your First Name">
@@ -57,5 +58,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
