--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/1d05bd84d8.js" crossorigin="anonymous"></script>   
 </head>
 <body>
-    <div class="containers">
+    <div class="container2">
         <div class="contents">
             <div class="left-side">
                 <div class="address details">
